# app/serializers/player_serializer.rb
@@ -1,0 +1,4 @@
+class PlayerSerializer
+  include JSONAPI::Serializer
+  attributes :email, :name, :description, :created_at, :updated_at
+end
