# app/serializers/user_serializer.rb
@@ -1,0 +1,4 @@
+class UserSerializer
+  include JSONAPI::Serializer
+  attributes :email, :name, :created_at, :updated_at
+end
